<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthenticationPart.RegisterUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_user_center_layout"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".8">

        <TextView
            android:id="@+id/homePageTextView"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="#4689C8"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/Create_new_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Create_new_account"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:text="@string/create_new_account"
            android:textAlignment="center"
            android:textColor="#4689C8"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/prenumeEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homePageTextView" />

        <EditText
            android:id="@+id/prenumeEditText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/first_name"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/NumeEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/Create_new_account" />

        <EditText
            android:id="@+id/NumeEditText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/last_name"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/nrTelEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/prenumeEditText" />

        <EditText
            android:id="@+id/nrTelEditText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/phone"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/emailEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/NumeEditText" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/email"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/passwordEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nrTelEditText" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10sp"
            android:hint="@string/password"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/button_create_acount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/emailEditText" />

        <Button
            android:id="@+id/button_create_acount"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/create_new_account"
            android:padding="10sp"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordEditText">

        </Button>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_user_center_layout"
        app:layout_constraintWidth_percent=".15" />

</androidx.constraintlayout.widget.ConstraintLayout>
