<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    tools:context=".MainPart.Fragments.SendProducerEmailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/send_message_top_bar"
        android:layout_width="0sp"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/send_message_go_back"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/send_message_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/send_message_go_back"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0sp"
        android:layout_height="0sp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/send_message_top_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/send_message_subject"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:background="@drawable/transparent_button_with_black_border"
                android:hint="@string/subject"
                android:inputType="text"
                android:padding="10sp"
                android:textColor="#101820"
                android:textColorHint="#101820"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".8" />

            <EditText
                android:id="@+id/send_message_message"
                android:layout_width="0sp"
                android:layout_height="0sp"
                android:layout_marginVertical="10sp"
                android:background="@drawable/transparent_button_with_black_border"
                android:gravity="top"
                android:hint="@string/message"
                android:inputType="textMultiLine"
                android:padding="10sp"
                android:textColor="#101820"
                android:textColorHint="#101820"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@id/send_message_send_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/send_message_subject"
                app:layout_constraintWidth_percent=".8" />

            <Button
                android:id="@+id/send_message_send_button"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10sp"
                android:background="@drawable/transparent_button_with_black_border"
                android:padding="10sp"
                android:text="@string/send"
                android:textColor="#101820"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintWidth_percent=".8" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>